--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 fs_extra = "1.2.0"
+iced = { version = "0.4", default-features = false, features = ["glow"] }
