--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 fs_extra = "1.2.0"
 iced = { version = "0.4", default-features = false, features = ["glow"] }
+iced_native = "0.5.1"
