--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 fs_extra = "1.2.0"
 iced = { version = "0.4", default-features = false, features = ["glow"] }
 iced_native = "0.5.1"
+toml = "0.5.9"
+serde = { version = "1.0.145", features = ["derive"] }
